--- a/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
@@ -15,7 +15,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Library/DialogueTemplates.xaml"/>
-				<!-- MOD START -->
+                <!-- MOD START -->
                 <ResourceDictionary Source="../Library/ImprovedUITemplates.xaml"/>
                 <!-- MOD END -->
             </ResourceDictionary.MergedDictionaries>
@@ -196,7 +196,7 @@
                         <ls:LSTooltip Content="{Binding Source='he9e4a39fg8a5dg4ac5gacffgaea214260c69',Converter={StaticResource TranslatedStringConverter}}"/>
                     </ls:LSButton.ToolTip>
                 </ls:LSButton>
-				<!-- MOD START - Adds picture button -->
+                <!-- MOD START - Adds picture button -->
                 <ls:LSButton x:Name="PictureModeBtn" ToolTipService.Placement="Center" ToolTipService.VerticalOffset="-88" Style="{StaticResource PictureModeButtonStyle}"
                     Command="{Binding Path=DataContext.CustomEvent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"
                     CommandParameter="OpenPictureMode">
@@ -205,16 +205,16 @@
                     </ls:LSButton.ToolTip>
                 </ls:LSButton>
                 <!-- MOD END -->
-            </StackPanel>
+                </StackPanel>
         </StackPanel>
 
-        <!-- MOD START - Remove early access text from dialogues
-		<TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
+        <!-- MOD START - Remove early access text from dialogues -->
+        <!-- <TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
             <Run Text="{Binding Source='h8be1f0ddgdfa7g4812ga2b5g04854b2a1a65', Converter={StaticResource TranslatedStringConverter}, ConverterParameter='ToUpper'}"/>
             <Run Text=" - "/>
             <Run Text="{Binding DataContext.Data.VersionString, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"/>
-        </TextBlock>
-		MOD END -->
+        </TextBlock> -->
+        <!-- MOD END -->
 
     </Grid>
     <b:Interaction.Triggers>
