--- a/ImprovedUI/Public/Game/GUI/Widgets/Dialogue_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/Dialogue_c.xaml
@@ -313,8 +313,8 @@
                     <!-- MOD START - Remove early access text from dialogues -->
                     <!--<TextBlock x:Name="VersionStringText" VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource HugeFontSize}" Margin="20,0"  Opacity="0.7">
                         <Run Text="{Binding Data.VersionString}"/>
-                    </TextBlock>
-					<!-- MOD END -->
+                    </TextBlock> -->
+                    <!-- MOD END -->
 
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="Loaded">
